Fix sidebar missing float:left causing overlap with content

--- a/_sass/layout/_sidebar.scss
+++ b/_sass/layout/_sidebar.scss
@@ -25,8 +25,8 @@
   }
 
   @include breakpoint($large) {
+    float: left;
     width: 200px;
-    flex-shrink: 0;
     opacity: 1;
     -webkit-transition: opacity 0.2s ease-in-out;
             transition: opacity 0.2s ease-in-out;
